--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/assets/index.59b1197f.css">
   </head>
   <body>
+    <div id="app"></div>
+
     <nav class="navbar navbar-expand-lg bg-light position-fixed w-100">
       <div class="container-fluid">
         <!-- <a class="navbar-brand" href="#">brand</a> -->
