--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lakshan Portfolio</title>
     <script type="module" crossorigin src="/assets/index.751c8ec8.js"></script>
-    <link rel="stylesheet" href="/assets/index.b016367f.css">
+    <link rel="stylesheet" href="/assets/index.21700b65.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light position-fixed w-100">
@@ -195,7 +195,7 @@
         <p>Feel free to reach out and drop me a message</p>
       </div>
       <div class="d-flex justify-content-center gap-3 text-center">
-        <div class="skills-content">
+        <div class="contact-content">
           <a href="mailto:lakshanperera.dev@gmail.com">
             <button type="button" class="btn btn-outline-dark">
               lakshanperera.dev@gmail.com
