--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <div class="heading pb-3 text-center">
         <h1>About</h1>
       </div>
-      <div class="about-content text-center m-auto">
-        <p>Hello, i’m 22 year old indie full stack developer based in colombo, I’m passionate about designing and building my own services/stuff.</p>
-        <p>In my late teens i used to build small apps following online video tutorials. i really enjoyed it when i was able to built someting that actually worked.</p>
-        <p>Then from youtube i saw how other developers making huge impacts to the world by programming. this was a major inspiration for keep me going in my coding journey.</p>
-        <p>Click below to read my resume</p>
+      <div class="about-content text-center m-auto">        
+        <p>Hello, I am a 22-year-old indie full-stack developer based in Colombo. I am passionate about designing and building my own services and projects.</p>
+        <p>During my late teens, I built small applications by following online video tutorials, and I really enjoyed it when I was able to build something that actually worked.</p>
+        <p>Later on, I came across YouTube videos that showcased how other developers were making huge impacts in the world through programming. This became a major source of inspiration for me to continue my coding journey.</p>
+        <p>Click below to view my resume.</p>
       </div>
       <div class="text-center">
         <a target="_blank" href="https://drive.google.com/file/d/1DYTjgB3NVcvZLIfE1WAOSm_Y9c8hoIS5/view?usp=share_link">
@@ -79,7 +79,7 @@
     <section class="projects" id="projects">
       <div class="heading text-center">
         <h1 class="pb-3">Projects</h1>
-        <p>I spend most of my spare time building things, here are few of my favorite projects</p>
+        <p>I spend most of my spare time building things. Here are a few of my favorite projects.</p>
       </div>
 
       <div class="project-content container">
@@ -90,9 +90,9 @@
           </div>
           <div class="col-md-6 text">
             <h2>Budgetbook</h2>
-            <p>Purpose of this application is to allow users to track their expenses and incomes, Users have the ability to create multiple accounts such as (Personal, Banking, Invesetment)</p>
-            <p>This project is open-source and available for developers under MIT license</p>
-            <p>For learn more about architecture & technologies please visit the github README.md</p>
+              <p>The purpose of this application is to allow users to track their expenses and incomes. Users have the ability to create multiple accounts such as Personal, Banking, and Investment.</p>
+              <p>This project is open-source and available for developers under the MIT license.</p>
+              <p>To learn more about the architecture and technologies used, please visit the README.md file on GitHub.</p>            
             <div>
               <a target="_blank" href="https://github.com/0xluckycoder/budgetbook">
                 <button type="button" class="btn btn-dark">Code</button>
